2006-02-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tie-formatting-problem.cc (from_lv_ties): add heads for
	common refpoint.

	* flower/include/std-vector.hh (iterof): add iterof macro.

	* lily/enclosing-bracket.cc (width): new function.

	* lily/align-interface.cc (align_elements_to_extents): reinstate
	warning.

2006-02-18  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/index.html.in: fix spelling: thankyous.

2006-02-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/lyric-hyphen.cc: typo.

2006-02-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* stepmake/stepmake/c++-rules.make ($(outdir)/%.cc
	$(outdir)/%.hh): generate h and c in one rule; otherwise -jX
	builds don't work. 

	* VERSION: release 2.7.35

	* lily/beam.cc (get_default_dir): oops. Take abs () for
	extremes[DOWN].
	(get_default_dir): use extreme position criterion only in absence
	of forced stem directions.

	* VERSION (PATCH_LEVEL): bump VERSION.

	* mf/GNUmakefile: explicit rules for emmentaler/aybabtu
	dependencies. Necessary for -jX builds.  

2006-02-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/relocate.cc (setup_paths): Yet another const fix.

2006-02-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* configure.in (HOST_ARCH): determine HOST_ARCH in configure.

	* lily/relocate.cc (setup_paths): oops.

2006-02-17  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/index.html.in: order links: html before PDF.

2006-02-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tie-column-format.cc (Module): remove.

	* lily/relocate.cc (setup_paths): GCC 4.2 fixes: const correctness.

	* lily/text-spanner.cc (print): idem.

	* lily/dynamic-text-spanner.cc (print): only print line if longer
	than dash-period.

	* lily/auto-change-iterator.cc (change_to): formatting.

	* lily/beam.cc (get_default_dir): take extreme note head as input
	for stem direction.

	* lily/tie.cc (get_default_dir): only look directions for visible
	stems. 

	* lily/side-position-interface.cc (aligned_side): oops. Don't